tests/rosetta/transpiler/Kotlin/cholesky-decomposition-1.error
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/rosetta/transpiler/Kotlin/cholesky-decomposition-1.kt:53:67: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
@InlineOnly public inline operator fun <@OnlyInputTypes K, V> Map<out Int, ???>.get(key: Int): ??? defined in kotlin.collections
            row = run { val _tmp = row.toMutableList(); _tmp.add((ele[idx]).toDouble()); _tmp } as MutableList<Double>
                                                                  ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/cholesky-decomposition-1.kt:53:70: error: no get method providing array access
            row = run { val _tmp = row.toMutableList(); _tmp.add((ele[idx]).toDouble()); _tmp } as MutableList<Double>
                                                                     ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/cholesky-decomposition-1.kt:67:30: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
@SinceKotlin @InlineOnly public inline fun Int.toBigInteger(): BigInteger defined in kotlin
@SinceKotlin @InlineOnly public inline fun Long.toBigInteger(): BigInteger defined in kotlin
@SinceKotlin @InlineOnly public inline fun String.toBigInteger(): BigInteger defined in kotlin.text
@SinceKotlin @InlineOnly public inline fun String.toBigInteger(radix: Int): BigInteger defined in kotlin.text
        while (c.compareTo(n.toBigInteger()) < 0) {
                             ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/cholesky-decomposition-1.kt:107:67: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
@InlineOnly public inline operator fun <@OnlyInputTypes K, V> Map<out Int, ???>.get(key: Int): ??? defined in kotlin.collections
            row = run { val _tmp = row.toMutableList(); _tmp.add((ele[idx]).toDouble()); _tmp } as MutableList<Double>
                                                                  ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/cholesky-decomposition-1.kt:107:70: error: no get method providing array access
            row = run { val _tmp = row.toMutableList(); _tmp.add((ele[idx]).toDouble()); _tmp } as MutableList<Double>
                                                                     ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/cholesky-decomposition-1.kt:126:21: error: unresolved reference: size
    while (idx < ae.size) {
                    ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/cholesky-decomposition-1.kt:135:19: error: unresolved reference: size
    while (i < ae.size) {
                  ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/cholesky-decomposition-1.kt:136:17: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
@InlineOnly public inline operator fun <@OnlyInputTypes K, V> Map<out Int, ???>.get(key: Int): ??? defined in kotlin.collections
        val e = ae[i]
                ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/cholesky-decomposition-1.kt:136:19: error: no get method providing array access
        val e = ae[i]
                  ^
